# filesystem

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dockerfile  makefile  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: code-lint.yml
src/: main.py
src/core/: config.py  enums.py  formatters.py  meta.py  types.py  validations.py
src/tools/: __init__.py  create_directory.py  directory_tree.py  edit_file.py  get_allowed_paths.py  get_file_info.py  list_directory.py  list_directory_with_size.py  move_file.py  read_file.py  read_multiple_files.py  search_files.py  write_file.py
